--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "proxy": "http://localhost:8000",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=8888 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
