--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,24 @@
 Django==2.0.7
 django-cors-headers==2.3.0
 pytz==2018.5
+certifi==2018.4.16
+chardet==3.0.4
+Django==2.1
+django-cors-headers==2.4.0
+et-xmlfile==1.0.1
+idna==2.7
+jdcal==1.4
+JPype1==0.6.3
+konlpy==0.5.1
+mecab-python===0.996-ko-0.9.0
+nltk==3.3
+numpy==1.15.0
+openpyxl==2.1.5
+pandas==0.23.4
+Pillow==5.3.0
+python-dateutil==2.7.3
+pytz==2018.5
+requests==2.19.1
+six==1.11.0
+urllib3==1.23
+xlrd==1.1.0
